RealtimeOutgoingVideoSourceMac should pass a ObjCFrameBuffer buffer https://bugs.webkit.org/show_bug.cgi?id=184281 rdar://problem/39153262

Reviewed by Jer Noble.

Source/ThirdParty/libwebrtc:

Introduce a routine to create the wrapper around native pixel buffers as expected by the new libwebrtc H264 encoder.

* Configurations/libwebrtc.iOS.exp:
* Configurations/libwebrtc.iOSsim.exp:
* Configurations/libwebrtc.mac.exp:
* Source/webrtc/sdk/WebKit/WebKitUtilities.h:
* Source/webrtc/sdk/WebKit/WebKitUtilities.mm:
(webrtc::pixelBufferToFrame):

Source/WebCore:

Covered by manual testing by going to WebRTC web sites.

* platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.cpp:
(WebCore::RealtimeOutgoingVideoSourceCocoa::sampleBufferUpdated):


Canonical link: https://commits.webkit.org/199834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230227 268f45cc-cd09-0410-ab3c-d52691b4dbfc